--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<html>
-  <body>
-    <p>
-      Hello World
-    </p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Cheat Sheet</title>
+</head>
+<body>
+  <h1>Titre du Page</h1>
+  
+  <button>Presse-moi</button>
+  
+    <p class="paragraph">paragraphe un</p>
+    <p class="paragraph-two">paragraphe deux</p>
+    <p class="paragraph-three">paragraphe trois</p>
+</body>
 </html>
